4. Allow app to specify a quit action. If so, this will be shown in main menu.
5. Move 'Application settings' into main menu.
6. Fix not showing track numbers (if configured to do so) in now-playing.
7. Smooth scroll 'Information' dialog to 'Plugins' section when there are
   updates available - to make it obvious what has happened.
8. Use current track detais for "Go to XXX" entries.

1.8.1
-----
1. Fix multi-disc handling breaking queue display.
2. Fix starting track when selecting 'Play album from track' on a multi-cd album
   where LMS is set to group discs.
3. Remove 'Play this mix' item even if there are no tracks for mix.
4. Adjust portrait max size calculation.
5. Add work-around for older browser's that don't support CSS min()
6. When browsing genres, show 'All Artists' and 'Album Artists' if LMS set to
   use two separate lists, and also show 'Compilations'
7. If group is created with no players, assign a list of basic default browse
   modes.
8. Update group player's list of browse modes when add/remove players in 'Manage
   players' dialog.

1.8.0
-----
 1. Set OpenFrame default icon.
 2. Add more icon choices.
 3. Use MAC/playerid to set icon of raspberry-pi - thanks to 'mavit'
 4. Increase portrait now-playing font size if both width and height are 750px
    or more.
 5. For mobile devices, switch to landscape when width >= height*1.3, else
    switch when width >= height*1.5 (previous ratio for all).
 6. Re-layout portrait now-playing; cover is at top, all text is shown below
    (fade out if insufficient space, scrollable), rating shown at top of cover.
 7. Allow song details text in landscape now-playing to scroll.
 8. Add 'Go to artist' and 'Go to album' actions to now-playing cover context
    menu.
 9. If invoke browse from queue, or now-playing, in mobile layout, then revert
    to this page when navigating back.
10. Show changes in plugin info dialog.
11. Press, not long-press, on queue nav whilst in queue view scrolls to current.