@@ -457,6 +457,7 @@
 "1 day":"1 den",
 "%1 days":"%1 dní",
 "Display rating stars.":"",
+"Go to composer":"",
 "Quit":"",
 "Show rating":""
 }
