@@ -454,6 +454,7 @@
 "Drop here to remove from group":"",
 "Go to album":"",
 "Go to artist":"",
+"Go to composer":"",
 "Quit":"",
 "Show current date and time":"",
 "Show current date and time in main toolbar if there is sufficient space.":"",
