@@ -444,6 +444,7 @@
 "Firmware: %1":"",
 "Go to album":"",
 "Go to artist":"",
+"Go to composer":"",
 "IP: %1":"",
 "Information":"",
 "Mon":"",
