@@ -167,6 +167,7 @@
 "Go home":"",
 "Go to album":"",
 "Go to artist":"",
+"Go to composer":"",
 "Go to homescreen":"",
 "Group Players":"",
 "Group members":"",
