@@ -458,5 +458,6 @@
 "%1 Years":"%1 années",
 "1 day":"1 jour",
 "%1 days":"%1 jours",
+"Go to composer":"",
 "Quit":""
 }
