@@ -353,6 +353,7 @@
 "Go home":"",
 "Go to album":"",
 "Go to artist":"",
+"Go to composer":"",
 "Go to homescreen":"",
 "Historic track count":"",
 "Homepage":"",
