@@ -458,5 +458,6 @@
 "%1 Years":"%1 Jaren",
 "1 day":"1 dag",
 "%1 days":"%1 dagen",
+"Go to composer":"",
 "Quit":""
 }
