@@ -451,6 +451,7 @@
 "Drop here to remove from group":"",
 "Go to album":"",
 "Go to artist":"",
+"Go to composer":"",
 "No entries found":"",
 "Quit":"",
 "Show current date and time":"",
